--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,38 @@
-<h1>Test</h1>
+<dx-button [stylingMode]="contained" [type]="normal" [text]="buttonText" [width]="200" (onClick)="openPopup($event)"
+        (onEscapeKey)="true">
+</dx-button>
+
+<dx-popup (onInitialized)="onPopupInit($event)" title="Person erstellen" [showCloseButton]="false" [visible]="visible"
+        [showTitle]="true" maxHeight="700" maxWidth="1170">
+    <dxi-toolbar-item toolbar="bottom" location="before" widget="dxButton" [options]="abortButtonOptions"></dxi-toolbar-item>
+    <dxi-toolbar-item toolbar="bottom" location="after" widget="dxButton" [options]="saveButtonOptions"></dxi-toolbar-item>
+    
+    <div *dxTemplate="let data of 'content'">
+        <dx-tab-panel [animationEnabled]="true" [showNavButtons]="true">
+            <dxi-item title="Allgemeine Daten">
+                <div *dxTemplate>
+                    <dx-scroll-view>
+                        <form>
+                            <dx-form id="newForm" [(formData)]="formData" [colCount]="5">
+
+                                <dxi-item itemType="group" [colSpan]="3">
+                                    <dxi-item dataField="name" [isRequired]="true" [label]="{ text: 'Name' }"></dxi-item>
+                    
+                                    <dxi-item dataField="sex" editorType="dxSelectBox">
+                                        <dxo-label text="Geschlecht"></dxo-label>
+                                    </dxi-item>
+                    
+                                    <dxi-item dataField="favoriteColor" editorType="dxColorBox">
+                                        <dxo-label text="Lieblingsfarbe"></dxo-label>
+                                    </dxi-item>
+                                </dxi-item>
+                
+                            </dx-form>
+                        </form>
+                    </dx-scroll-view>
+                </div>
+            </dxi-item>
+        </dx-tab-panel>
+    </div>
+</dx-popup>
+      
