--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<dx-button [stylingMode]="contained" [type]="normal" [text]="buttonText" [width]="200" (onClick)="openPopup($event)"
-        (onEscapeKey)="true">
-</dx-button>
 <dx-scroll-view>
+    <dx-button style="margin: 25px;" [stylingMode]="contained" [type]="normal" [text]="buttonText" [width]="200" (onClick)="openPopup($event)"
+            (onEscapeKey)="true">
+    </dx-button>
 
-<dx-popup (onInitialized)="onPopupInit($event)" title="Person erstellen" [showCloseButton]="false" [visible]="visible"
     <h3 style="margin: 15px 25px;">Bug reproduction steps</h3>
     <ol style="margin-top: 0; line-height: 1.5rem;">
         <li>Start Safari and open this application on an iPad Pro in Landscape mode or use a Mac and Xcode to emulate the iPad Pro.</li>
@@ -21,13 +20,15 @@
         The color box opens. At the same time the keyboard opens moving the color box upwards so that most of the color box is off screen and therefor not usable.
     </p>
 </dx-scroll-view>
+
+<dx-popup (onInitialized)="onPopupInit($event)" title="create person" [showCloseButton]="false" [visible]="visible"
         [showTitle]="true" maxHeight="700" maxWidth="1170">
     <dxi-toolbar-item toolbar="bottom" location="before" widget="dxButton" [options]="abortButtonOptions"></dxi-toolbar-item>
     <dxi-toolbar-item toolbar="bottom" location="after" widget="dxButton" [options]="saveButtonOptions"></dxi-toolbar-item>
     
     <div *dxTemplate="let data of 'content'">
         <dx-tab-panel [animationEnabled]="true" [showNavButtons]="true">
-            <dxi-item title="Allgemeine Daten">
+            <dxi-item title="General Data">
                 <div *dxTemplate>
                     <dx-scroll-view>
                         <form>
@@ -37,11 +38,11 @@
                                     <dxi-item dataField="name" [isRequired]="true" [label]="{ text: 'Name' }"></dxi-item>
                     
                                     <dxi-item dataField="sex" editorType="dxSelectBox">
-                                        <dxo-label text="Geschlecht"></dxo-label>
+                                        <dxo-label text="Sex"></dxo-label>
                                     </dxi-item>
                     
                                     <dxi-item dataField="favoriteColor" editorType="dxColorBox">
-                                        <dxo-label text="Lieblingsfarbe"></dxo-label>
+                                        <dxo-label text="Favorite color"></dxo-label>
                                     </dxi-item>
                                 </dxi-item>
                 
